--- a/index.html
+++ b/index.html
@@ -147,10 +147,27 @@
               <div class="box-nav-main"><a href="#">Local Delivery in Israel</a></div>
             </div>
 
+            <div class="nav-subnav">
+              <div class="subnav-item "><a href="#"><div>Musical Instruments</div><div class="subnav-hover"></div></a></div>
+              <div class="subnav-item"><a href="#"><div>Deals</div><div class="subnav-hover"></div></a></div>
+              <div class="subnav-item"><a href="#"><div class="loading-screen">Guitars</div><div class="nav-arrow-down"></div></a></div>
+              <div class="subnav-item"><a href="#"><div class="loading-screen">Bass</div><div class="nav-arrow-down"></div></a></div>
+              <div class="subnav-item"><a href="#"><div class="loading-screen">Amplifieres & Effects</div><div class="nav-arrow-down"></div></a></div>
+              <div class="subnav-item"><a href="#"><div class="loading-screen">Keybaords</div><div class="nav-arrow-down"></div></a></div>
+              <div class="subnav-item"><a href="#"><div class="loading-screen">Drums</div><div class="nav-arrow-down"></div></a></div>
+              <div class="subnav-item"><a href="#"><div class="loading-screen">Recording</div><div class="nav-arrow-down"></div></a></div>
+              <div class="subnav-item"><a href="#"><div class="loading-screen">DJ & Karaoke</div><div class="nav-arrow-down"></div></a></div>
+              <div class="subnav-item"><a href="#"><div class="loading-screen">Band & Orchestra</div><div class="nav-arrow-down"></div></a></div>
+              <div class="subnav-item"><a href="#"><div class="loading-screen">Live sound</div><div class="nav-arrow-down"></div></a></div>
+              <div class="subnav-item"><a href="#"><div class="loading-screen">Pro Store</div><div class="nav-arrow-down"></div></a></div>
+              <div class="loading-screen-circle"><a href="#"></a></div>
+            </div>
         </div>
         
     </nav>
-    <main></main>
+    <main>
+      <!-- kjkj -->
+    </main>
     <footer></footer>
     
 </body>
