--- a/index.html
+++ b/index.html
@@ -238,12 +238,71 @@
             <p class="line-2"></p>
           </li>  
         </ul>
-        <!-- <ul class="price"> -->
-      <div class="gray-text">
-        <p>No Import Fees Deposit & $50.96 Shipping to Israel <a href="#" class="blue-link">Details</a></p>
-      </div>
-        <!-- </ul> -->
+        <!-- Need to add hover small window -->
+        <div class="gray-text">
+          <p>No Import Fees Deposit & $50.96 Shipping to Israel <a href="#" class="blue-link">Details</a></p>
+          <a href="#"><i class="arrow-down"></i></a>
+          <br>
+          <br>
+          Size: <span class="bold-strong">30" Classical</span>
+        </div>
+        <br>
+        <div class="sizes-colors-container">
+          <div class="size-btn size-1"><a href="#">30" Clasical</a> </div>
+          <div class="size-btn size-2"><a href="#">38" Clasical</a> </div> 
+        </div>
 
+        <div class="gray-text">
+          <p>Color: <span class="bold-strong">Sunburst</span></p>
+        </div>
+        <div class="sizes-colors-container">
+          <div class="color-img color-img-1"><a href="#"><img src="./assets/images/colors/1.jpg" alt=""></a></div>
+          <div class="color-img color-img-2"><a href="#"><img src="./assets/images/colors/2.jpg" alt=""></a></div>
+          <div class="color-img color-img-3"><a href="#"><img src="./assets/images/colors/3.jpg" alt=""></a></div>
+          <div class="color-img color-img-4"><a href="#"><img src="./assets/images/colors/4.jpg" alt=""></a></div>
+          <div class="color-img color-img-5"><a href="#"><img src="./assets/images/colors/5.jpg" alt=""></a></div>
+          <div class="color-img color-img-6"><a href="#"><img src="./assets/images/colors/6.jpg" alt=""></a></div>
+          <div class="color-img color-img-7"><a href="#"><img src="./assets/images/colors/7.jpg" alt=""></a></div>
+          <div class="color-img color-img-8"><a href="#"><img src="./assets/images/colors/8.jpg" alt=""></a></div>
+          <div class="color-img color-img-9"><a href="#"><img src="./assets/images/colors/9.jpg" alt=""></a></div>
+          <div class="color-img color-img-10"><a href="#"><img src="./assets/images/colors/10.jpg" alt=""></a></div>
+          <div class="color-img color-img-11"><a href="#"><img src="./assets/images/colors/11.jpg" alt=""></a></div>
+          
+        </div>
+
+
+        <div class="description-container">
+          <div class="left-dec bold-strong">
+            <p>Brand</p>
+            <p>Color</p>
+            <p>Top Material Type</p>
+            <p>Body Material</p>
+            <p>Black Material Type</p>
+          </div>
+          <div class="right-dec">
+            <p>Master Play</p>
+            <p>Sunburst</p>
+            <p>Wood</p>
+            <p>Wood</p>
+            <p>Wood</p>
+          </div>
+        </div>
+        <!-- <div class="description-container">
+          <div class="left-dec bold-strong">
+            Brand
+            Color
+            Top Material Type
+            Body Material
+            Black Material Type
+          </div>
+          <div class="right-dec">
+            Master Play
+            Sunburst
+            Wood
+            Wood
+            Wood
+          </div> -->
+        </div>
 
 
 
@@ -253,7 +312,6 @@
 
       <div class="main-right-col">
         klklk
-        </div>
       </div>
     
     </main>
