--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <link rel="stylesheet" media="(max-width:500px)" href="./styles/navbar/navbar.mobile.style.css">
 
     <link rel="stylesheet" media="(min-width:501px)" href="./styles/main/main.desktop.style.css">
-    <!-- <link rel="stylesheet" media="(max-width:500px)" href="./styles/navbar/navbar.mobile.style.css">  -->
+    <link rel="stylesheet" media="(max-width:500px)" href="./styles/main/mobile.style.css"> 
     
     
     <link href="./assets/favicon.ico" rel="icon" type="image/x-icon" />
